Layout issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -813,13 +813,13 @@ ul.unstyled span {
       margin-bottom: 1.3821rem;
       padding-top: 0.6179rem; } }
 
-.section a {
-  white-space: nowrap; }
+@media screen and (min-width: 0em) {
+  .section p {
+    max-width: 22em; } }
 
-.section a:after {
-  content: ' \2192';
-  display: inline;
-  opacity: 0; }
+@media screen and (min-width: 40em) {
+  .section p {
+    max-width: 40em; } }
 
 .section a:hover:after {
   content: ' \2192';
